Gerente de agencia pode mudar dados dos clientes quando quiser

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -29,7 +29,7 @@
                 <a href="/saque">Saque</a>
                 <a href="/deposito">Deposito</a>
                 <a href="/extrato">Extrato</a>        
-                <a href="/mudancaCadastral">Perfil de usuário</a>
+                <a href="/reqMudancaCadastral">Perfil de usuário</a>
                 <a href="/loggout">Sair</a>
                 <br>
             </div>
@@ -37,7 +37,7 @@
                 <img src="../static/public/logo.png" alt="logo">
             </a>
             <div class="user">
-                <a href="/mudancaCadastral">
+                <a href="//reqMudancaCadastral">
                 <img src="../static/public/user.png" alt="user" style="width:50px;height:50px;"></a>
             </div>
         </header>
