--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -30,8 +30,9 @@
                 <img src="../static/public/logo.png" alt="logo">
             </a>
             </div>
+        </header>
     <!-- Menssagem de erro de login (só aparece se as informações estiverem erradas) -->
-    
+
 
     <!-- Forms provisório -->
     <div class="login-form">
