--- a/src/templates/cadastro.html
+++ b/src/templates/cadastro.html
@@ -32,19 +32,20 @@
             </script>
     </head>
     <body class="body2">
-            <header class="navbar">
-                <div class="menu">
-                    <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
-                </div>
-                <div id="mySidenav" class="sidenav">
-                    <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
-                    <a href="/login">Login</a>
-                </div>
-                <a href="/home">
-                    <img src="../static/public/logo.png" alt="logo">
-                </a>
-                </div>
+        <header class="navbar">
+            <div class="menu">
+                <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
+            </div>
+            <div id="mySidenav" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
+                <a href="/login">Login</a>
+            </div>
+            <a href="/">
+                <img src="../static/public/logo.png" alt="logo">
+            </a>
+            </div>
             </header>
+            
             <form action="#" method="post" class="cadastro-form">
                 <h1>Cadastro</h1>
                 {% with mensagens = get_flashed_messages() %}
