Links que retornam a home agora retornam para home correspondente do cargo da pessoa

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -33,7 +33,7 @@
         </header>
     <!-- Menssagem de erro de login (só aparece se as informações estiverem erradas) -->
 
-    {% if gerente != None %}
+    {% if gerente == 'SIM' %}
         <h1>Login para gerentes</h1>
     {% endif %}
 
