Agora gerente de agencia pode apagar conta sem que haja requisição

--- a/src/templates/requisicoes.html
+++ b/src/templates/requisicoes.html
@@ -65,7 +65,7 @@
 {% if tipo == 'historico_operacao' %}
 
     {% for requisição in requisicoes %}
-        {% if requisição['status_operacao'] == 'Pendente' and requisi%}
+        {% if requisição['status_operacao'] == 'Pendente' %}
         <div class="row">
             <div class="coluna">
             <form class="req-form">
