inserção das colunas id_capital e capital_inicial na tabelacapital_banco no banco de dados. Criação da função que atualiza o banco de dados assim que alguém faz uma operação. Capital total do banco agora aparece na home do gerente geral. E usuários não podem sacar um valor que negativo o valor do capital total do banco.

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -58,6 +58,10 @@
             </div>
         </header>
     </div>
+    <div>
+        {% block capitalTotal %}
+        {% endblock %}
+    </div>
     <div class="corpohome">
         {% if nome %}
         <h1>Bem-vindo(a), {{ nome }}!</h1>
