--- a/src/templates/homegerentegeral.html
+++ b/src/templates/homegerentegeral.html
@@ -19,7 +19,7 @@
         <button id="req"><a href="/requisicoes/alteracao_cadastral" class="nav-link">Requisições alterações cadastrais</a></button>
         <button id="req"><a href="/requisicoes/encerramento_conta" class="nav-link">Requisições de encerramento de conta</a></button>
         <button id="req"><a href="/requisicoes/confirmacao_cadastro" class="nav-link">Requisições de abertura de conta</a></button>
-        
+        <button id="req"><a href="/agencias" class="nav-link">Agencias</a></button>
     </div>
     {% endblock %}
     </span>
