--- a/src/templates/requisicoes.html
+++ b/src/templates/requisicoes.html
@@ -41,7 +41,7 @@
                     <a href="/loggout">Sair</a>
                 </div>
                 {% if gerente == 'geral' %}
-                    <a href="/homeGerenteGeral">Home
+                    <a href="/homeGerenteGeral">
                         <img src="../static/public/logo.png" alt="logo">
                     </a>
                 {% elif gerente == 'agencia' %}
