--- a/src/templates/saque.html
+++ b/src/templates/saque.html
@@ -40,7 +40,7 @@
                     <br>
                 </div>
                 {% if gerente == 'geral' %}
-                    <a href="/homeGerenteGeral">Home
+                    <a href="/homeGerenteGeral">
                         <img src="../static/public/logo.png" alt="logo">
                     </a>
                 {% elif gerente == 'agencia' %}
