--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -25,7 +25,7 @@
             <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
                 {% if gerente == 'geral' %}
-                    <a href="/homeGerenteGeral">Home
+                    <a href="/homeGerenteGeral">Home</a>
                 {% elif gerente == 'agencia' %}
                     <a href="/homeGerenteAgencia">Home</a>
                 {% else %}
@@ -39,7 +39,7 @@
                 <br>
             </div>
             {% if gerente == 'geral' %}
-                <a href="/homeGerenteGeral">Home
+                <a href="/homeGerenteGeral">
                     <img src="../static/public/logo.png" alt="logo">
                 </a>
             {% elif gerente == 'agencia' %}
