--- a/src/templates/usuarios_agencia.html
+++ b/src/templates/usuarios_agencia.html
@@ -40,7 +40,7 @@
             <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
                 {% if gerente == 'geral' %}
-                    <a href="/homeGerenteGeral">Home
+                    <a href="/homeGerenteGeral">Home</a>
                 {% elif gerente == 'agencia' %}
                     <a href="/homeGerenteAgencia">Home</a>
                 {% else %}
@@ -49,7 +49,7 @@
                 <a href="/loggout">Sair</a>
             </div>
             {% if gerente == 'geral' %}
-                <a href="/homeGerenteGeral">Home
+                <a href="/homeGerenteGeral">
                     <img src="../static/public/logo.png" alt="logo">
                 </a>
             {% elif gerente == 'agencia' %}
