--- a/src/static/styles/styles.css
+++ b/src/static/styles/styles.css
@@ -450,6 +450,23 @@ fieldset{
   
 }
 
+.blocoAgencia{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.blocoAgencia > div{
+  text-align:center;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f0e5c7;
+  padding: 25px;
+  border-radius:10px;
+  width:25vw;
+}
+
 .req-form label{
   font-size:20px;
   margin: 15px 0;
