Comprovante comporta informações de transferência

--- a/src/templates/comprovante.html
+++ b/src/templates/comprovante.html
@@ -13,19 +13,29 @@
     </div>
     <div class="comprovante">
         <h1>Comprovante de {{info['tipo_operacao']}}</h1>
-        <h2>Dados da conta: </h2>
-        <h3>Nome: {{nome}}</h3>
         <h3>Operação: {{info['tipo_operacao']}}</h3>
+        <h3>Valor: {{info['valor_operacao']}}</h3>
+        {% if info['tipo_operacao'] == 'Transferência' %}
+            <h2>Dados da conta Origem: </h2>
+        {% else %}
+            <h2>Dados da conta: </h2>
+        {% endif %}
+        <h3>Nome: {{nome}}</h3>
         <h3>Agência: {{info['numero_agencia']}}</h3>
         <h3>Número da conta: {{info['numero_conta']}} </h3>
         <h3>Saldo anterior: {{info['saldo_operacao']}}</h3>
-        <h3>Valor: {{info['valor_operacao']}}</h3>
+        {% if info['tipo_operacao'] == 'Transferência'%}
+            <h2>Dados da conta Destino: </h2>
+            <h3>Nome: {{nome_destino}} </h3>
+            <h3>Agência: {{info['numero_agencia_destino']}}</h3>
+            <h3>Número da conta: {{info['numero_conta_destino']}} </h3>
+        {% endif%}
         {% if info['tipo_operacao'] == 'Depósito'%}
-        <h3>Status da operação: {{info['status_operacao']}}</h3>
+                <h3>Status da operação: {{info['status_operacao']}}</h3>
         {% endif %}
-        <h2 id="datahora">{{info['tipo_operacao']}} realizado em: {{info['data_hora_operacao']}}</h2>
-        {% if info['status_operacao'] != 'Pendente' %}
-        <h2 id="datahora">{{info['status_operacao']}} em: {{info['data_hora_operacao']}}</h2>
+            <h2 id="datahora">{{info['tipo_operacao']}} realizado(a) em: {{info['data_hora_operacao']}}</h2>
+        {% if info['status_operacao'] != 'Pendente' and info['status_operacao'] == 'Depósito' %}
+            <h2 id="datahora">{{info['status_operacao']}} em: {{info['data_hora_operacao']}}</h2>
         {% endif %}
 
     </div>
