Gerente geral passa a poder ver os usuarios de cada agencia, alterar dados e excluir contas.

--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -149,7 +149,7 @@
         
         {% if alteracao == True %}
             <a href="{{'/encerraConta/%s' % (id_usuario)}}"><input type="button" value="EXCLUIR CONTA" id="deletar"></a>
-            <a href="/usuarios_agencia" class="voltar"><button> Voltar </button></a>
+            <a href="/agencias" class="voltar"><button> Voltar </button></a>
             
         {% else %}
             <a href="/enviaReqEncerramento"><input type="button" value="EXCLUIR CONTA" id="deletar"></a>
